# tuix_waveform_viewer

./: Cargo.toml  README.md
src/: audio.rs  audio_file.rs  audio_stream.rs  main.rs  sample_player.rs  theme.css  utils.rs  waveform.rs
src/widgets/: app_event.rs  footer.rs  header.rs  icons.rs  mod.rs
