[package]
name = "wav_viewer"
version = "0.1.0"
authors = ["George Atkinson <geomyles@yahoo.co.uk>", "Mike Hilgendorf <mike@hilgendorf.audio>"]
edition = "2018"
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tuix = {git = "https://github.com/geom3trik/tuix", rev = "07ae28e785a4ba30951de27c5b49a1188c94925d"}
tuix = {git = "https://github.com/geom3trik/tuix", branch = "develop"}
# tuix = {path = "../tuix"}
native-dialog = "0.5.4"
femtovg = {git = "https://github.com/femtovg/femtovg", branch = "master"}
dasp_sample = "0.11.0"
cpal = "0.13"
hound = { git = "https://github.com/ruuda/hound.git"}
basedrop = { git = "https://github.com/glowcoil/basedrop.git" }
ringbuf = "0.2"
image = "0.23.13"