[package]
name = "wav_viewer"
version = "0.1.0"
authors = ["George Atkinson <geomyles@yahoo.co.uk>", "Mike Hilgendorf <mike@hilgendorf.audio>"]
edition = "2018"
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuix = {git = "https://github.com/geom3trik/tuix", rev = "5fc8915d9c4735aa40e9bae45a711ef62ad928b3"}
# tuix = {path = "../tuix"}
native-dialog = "0.5.4"
femtovg = {git = "https://github.com/femtovg/femtovg", branch = "master"}
dasp_sample = "0.11.0"
cpal = "0.13"
hound = { git = "https://github.com/ruuda/hound.git"}
basedrop = { git = "https://github.com/glowcoil/basedrop.git" }
ringbuf = "0.2"
image = "0.23.13"